# whatsapp-python

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  CODE_REVIEW_LOOP2.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.webhook  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PLAN-fix-chat-group-names.md  PLAN.md  README.md  STATUS.md  captain-definition  docker  docker-compose.webhook.yml  docker-compose.yml  package-lock.json  package.json  plan.md  playwright.config.ts  pyproject.toml  quickstart-opencode.sh  requirements-webhook.txt  requirements.txt  run_webhook.py  tofix.md
.github/workflows/: ci.yml
.opencode/plans/: chatwoot-enhancements.md  chatwoot-evolution-alignment.md  chatwoot-full-parity.md  chatwoot-parity-complete.md  codebase-review-fixes.md
bridge/: index.mjs  package.json  vitest.config.ts
bridge/tests/: bridge-core.test.mjs  protocol.test.mjs
docs/: IMPLEMENTATION_SUMMARY.md  PHASE7-COMPLETION.md  PHASE8-COMPLETION.md  PHASE9-COMPLETION.md  PLUGIN_SYSTEM_PLAN.md  SECURITY_FIXES.md  admin-dashboard.md  chatwoot-integration.md  chatwoot-parity-checklist.md  connection-health-design.md  contacts-sync.md  evolution-chatwoot-analysis.md  observability.md  opencode-integration.md
monitoring/: loki-config.yml  otel-collector-config.yaml  promtail-config.yml
scripts/: opencode_webhook_handler.py  update_dor_tenant.py  webhook_listener.py  websocket_client.py
scripts/sample_integration/: PROMPT.md  opencode_webhook_handler.py  session_manager.py
src/: __init__.py  config.py  main.py  main_add_admin_ws.py
src/admin/: __init__.py  auth.py  log_buffer.py  routes.py  websocket.py
src/api/: __init__.py  auth.py  chatwoot_routes.py  routes.py  websocket.py
src/bridge/: __init__.py  client.py  protocol.py
src/chatwoot/: __init__.py  client.py  integration.py  models.py  sync.py  webhook_handler.py
src/middleware/: __init__.py  ratelimit.py
src/models/: __init__.py  events.py  group.py  message.py
src/store/: __init__.py  database.py  messages.py
src/telemetry/: __init__.py
src/tenant/: __init__.py
src/utils/: __init__.py  history.py  network.py  phone.py
src/webhooks/: __init__.py
tasks/: IMPLEMENTATION_SUMMARY.md  health-check-implementation.md  lessons.md  message-direction-fix.md  outbound-messages-fix.md  phase4-5-COMPLETE.md  phase4-5-plan.md  phase4-5-progress.md  todo.md
tests/: conftest.py  conftest_pg.py  test_admin_auth.py  test_admin_dashboard.py  test_admin_http_happy_path.py  test_admin_logs_performance.py  test_admin_logs_routes.py  test_admin_logs_security.py  test_admin_logs_websocket.py  test_admin_websocket.py  test_api.py  test_api_auth.py  test_api_routes_comprehensive.py  test_bridge.py  test_bridge_client.py  test_bridge_crash.py  test_bridge_protocol.py  test_bridge_restart_lock.py  test_bulk_operations_api.py  test_chatwoot.py  test_chatwoot_extended.py  test_chatwoot_sync.py  test_config.py  test_contacts.py  test_create_task_logging.py  test_database_postgres.py  test_db_chat_tabs.py  test_e2e_whatsapp_chatwoot.py  test_frontend_error_reporting.py  test_health_check.py  test_history.py  test_history_sync.py  test_htmx_fragments_http.py  test_issue10_status_validation.py  test_issue2_edited_message.py  test_issue4_cache_race_condition.py  test_issue9_fire_and_forget.py  test_js_function_coverage.py  test_log_buffer.py  test_log_event_capture.py  (+33 more)
tests/fixtures/: app_client.py  bridge_mock.py  factories.py
tests/playwright/: conftest.py  test_accessibility.py  test_admin_api.py  test_admin_comprehensive.py  test_chatwoot.py  test_dashboard.py  test_from_chat_names.py  test_group_names.py  test_js_no_errors.py  test_live_e2e.py  test_login.py  test_logs.py  test_media_messages.py  test_messages.py  test_messages_new_features.py  test_responsive.py  (+7 more)
(+8 files in other folders)
