[project]
name = "whatsapp-python-api"
version = "1.0.0"
description = "WhatsApp API with FastAPI and Baileys bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
playwright = [
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "playwright: browser-based UI tests (deselect with '-m \"not playwright\"')",
    "e2e: end-to-end tests requiring live services",
    "slow: tests that take more than 5 seconds",
    "accessibility: accessibility-related tests",
    "responsive: responsive design tests",
    "websocket: WebSocket-related tests",
]
