[project]
name = "whatsapp-python-api"
version = "1.0.0"
description = "WhatsApp API with FastAPI and Baileys bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.0.0",
    "testcontainers-postgres>=0.0.1rc1",
]
playwright = [
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "nest-asyncio>=1.6.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.0",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__init__.py",
    "src/admin/__init__.py",
    "src/api/__init__.py",
    "src/bridge/__init__.py",
    "src/chatwoot/__init__.py",
    "src/middleware/__init__.py",
    "src/models/__init__.py",
    "src/store/__init__.py",
    "src/tenant/__init__.py",
    "src/telemetry/__init__.py",
    "src/utils/__init__.py",
    "src/webhooks/__init__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
    "pass",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "playwright: browser-based UI tests (deselect with '-m \"not playwright\"')",
    "e2e: end-to-end tests requiring live services",
    "slow: tests that take more than 5 seconds",
    "accessibility: accessibility-related tests",
    "responsive: responsive design tests",
    "websocket: WebSocket-related tests",
    "postgres: tests requiring PostgreSQL via testcontainers",
]
